--- a/index.html
+++ b/index.html
@@ -3,36 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FA-Tshirt</title>
-    <link rel="stylesheet" href="styles.css"> <!-- External CSS -->
+    <title>FA-Tshirt - Home</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <!-- Top Search Bar -->
     <header>
-        <h1>Welcome to FA-Tshirt</h1>
-        <p>Exclusive Collection of Down Shoulder T-shirts</p>
+        <div class="search-bar">
+            <input type="text" placeholder="Search products...">
+            <button>Search</button>
+        </div>
     </header>
 
-    <section class="collection">
-        <h2>Our Latest Collection</h2>
-        <div class="product">
-            <img src="tshirt-image1.jpg" alt="T-Shirt 1">
-            <p>Stylish Down Shoulder T-shirt 1</p>
-            <button>Buy Now</button>
+    <!-- Main Content -->
+    <div class="main-content">
+        <div class="left-sidebar">
+            <!-- Add any categories or filters if needed -->
         </div>
-        <div class="product">
-            <img src="tshirt-image2.jpg" alt="T-Shirt 2">
-            <p>Stylish Down Shoulder T-shirt 2</p>
-            <button>Buy Now</button>
-        </div>
-        <div class="product">
-            <img src="tshirt-image3.jpg" alt="T-Shirt 3">
-            <p>Stylish Down Shoulder T-shirt 3</p>
-            <button>Buy Now</button>
-        </div>
-    </section>
 
-    <footer>
-        <p>© 2025 FA-Tshirt | All Rights Reserved</p>
-    </footer>
+        <!-- Products Section -->
+        <div class="product-list">
+            <!-- List your products here -->
+            <div class="product-card">
+                <img src="your-image.jpg" alt="T-shirt">
+                <h3>Product Name</h3>
+                <p>Description</p>
+                <button>Buy Now</button>
+            </div>
+        </div>
+
+        <!-- Right Sidebar Menu -->
+        <div class="right-sidebar">
+            <h3>Menu</h3>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">About Us</a></li>
+            </ul>
+        </div>
+    </div>
+
 </body>
 </html>
