--- a/index.html
+++ b/index.html
@@ -3,47 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FA-Tshirt - Home</title>
+    <title>FA-Tshirt</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <!-- Top Search Bar -->
+    <!-- Header Section with Logo -->
     <header>
-        <div class="search-bar">
-            <input type="text" placeholder="Search products...">
-            <button>Search</button>
+        <div class="logo">
+            <h1>FA-Tshirt</h1>
         </div>
+        <nav>
+            <ul>
+                <li><a href="#men">Men</a></li>
+                <li><a href="#women">Women</a></li>
+                <li><a href="#mobile-covers">Mobile Covers</a></li>
+                <li><a href="#search">Search by products</a></li>
+                <li><a href="#login">Login</a></li>
+                <li><a href="#plus-size">Plus Size</a></li>
+                <li><a href="#accessories">Accessories</a></li>
+                <li><a href="#official-merch">Official Merch</a></li>
+                <li><a href="#sneakers">Sneakers</a></li>
+                <li><a href="#bewakoof-air">Bewakoof Air</a></li>
+                <li><a href="#heavy-duty">Heavy Duty</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <!-- Main Content -->
-    <div class="main-content">
-        <div class="left-sidebar">
-            <!-- Add any categories or filters if needed -->
-        </div>
-
-        <!-- Products Section -->
-        <div class="product-list">
-            <!-- List your products here -->
-            <div class="product-card">
-                <img src="your-image.jpg" alt="T-shirt">
-                <h3>Product Name</h3>
-                <p>Description</p>
-                <button>Buy Now</button>
-            </div>
-        </div>
-
-        <!-- Right Sidebar Menu -->
-        <div class="right-sidebar">
-            <h3>Menu</h3>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Products</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">About Us</a></li>
-            </ul>
-        </div>
-    </div>
+    <!-- Add your content here -->
+    <section id="content">
+        <h2>Welcome to FA-Tshirt</h2>
+        <p>Explore our collection of Men, Women, and more!</p>
+    </section>
 
 </body>
 </html>
