--- a/index.html
+++ b/index.html
@@ -1,39 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FA-Tshirt</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>FA-Tshirt</title>
+  <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
 </head>
 <body>
-    <!-- Header Section with Logo -->
-    <header>
-        <div class="logo">
-            <h1>FA-Tshirt</h1>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="#men">Men</a></li>
-                <li><a href="#women">Women</a></li>
-                <li><a href="#mobile-covers">Mobile Covers</a></li>
-                <li><a href="#search">Search by products</a></li>
-                <li><a href="#login">Login</a></li>
-                <li><a href="#plus-size">Plus Size</a></li>
-                <li><a href="#accessories">Accessories</a></li>
-                <li><a href="#official-merch">Official Merch</a></li>
-                <li><a href="#sneakers">Sneakers</a></li>
-                <li><a href="#bewakoof-air">Bewakoof Air</a></li>
-                <li><a href="#heavy-duty">Heavy Duty</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <!-- Add your content here -->
-    <section id="content">
-        <h2>Welcome to FA-Tshirt</h2>
-        <p>Explore our collection of Men, Women, and more!</p>
-    </section>
+  <header>
+    <div class="logo">
+      <h1>FA-Tshirt</h1>
+    </div>
+    <div class="search-bar">
+      <input type="text" placeholder="Search for products...">
+    </div>
+    <div class="header-right">
+      <a href="#" class="login">Login</a>
+      <a href="#" class="cart">Cart</a>
+    </div>
+  </header>
 
 </body>
 </html>
