--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FA-Tshirt</title>
-  <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
+  <!-- Header Section -->
   <header>
     <div class="logo">
       <h1>FA-Tshirt</h1>
@@ -21,5 +22,37 @@
     </div>
   </header>
 
-</body>
-</html>
+  <!-- Main Navigation Menu -->
+  <nav class="main-nav">
+    <ul>
+      <li><a href="#">Men</a></li>
+      <li><a href="#">Women</a></li>
+      <li><a href="#">Plus Size</a></li>
+      <li><a href="#">Accessories</a></li>
+    </ul>
+  </nav>
+
+  <!-- Main Content Section -->
+  <main class="main-content">
+    <section class="featured-products">
+      <h2>Featured Products</h2>
+      <div class="product-grid">
+        <!-- Add product images and details here -->
+        <div class="product-item">
+          <img src="product1.jpg" alt="Product 1">
+          <p>Product Name</p>
+          <p>Price</p>
+        </div>
+        <div class="product-item">
+          <img src="product2.jpg" alt="Product 2">
+          <p>Product Name</p>
+          <p>Price</p>
+        </div>
+        <!-- Repeat for more products -->
+      </div>
+    </section>
+  </main>
+
+  <!-- Footer Section -->
+  <footer>
+    <
