--- a/index.html
+++ b/index.html
@@ -3,22 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FA-Tshirt - Your Fashion Destination</title>
+  <title>FA-Tshirt</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
   <!-- Header Section -->
   <header>
-    <div class="logo">
-      <h1>FA-Tshirt</h1>
-    </div>
-    <div class="search-bar">
-      <input type="text" placeholder="Search for t-shirts, accessories, and more...">
-    </div>
-    <div class="header-right">
-      <a href="#" class="login">Login</a>
-      <a href="#" class="cart">Cart</a>
+    <div class="header-content">
+      <!-- Logo Section -->
+      <div class="logo">
+        <h1>FA-Tshirt</h1>
+      </div>
+
+      <!-- Search Bar Section -->
+      <div class="search-bar">
+        <input type="text" placeholder="Search your products">
+        <button class="search-btn">
+          <img src="search-icon.png" alt="Search" />
+        </button>
+      </div>
+
+      <!-- Login and Cart -->
+      <div class="header-right">
+        <a href="#" class="login">Login</a>
+        <a href="#" class="cart">Cart</a>
+      </div>
     </div>
   </header>
 
@@ -27,31 +37,4 @@
     <ul>
       <li><a href="#">Men</a></li>
       <li><a href="#">Women</a></li>
-      <li><a href="#">Plus Size</a></li>
-      <li><a href="#">Accessories</a></li>
-      <li><a href="#">Official Merch</a></li>
-    </ul>
-  </nav>
-
-  <!-- Banner Section -->
-  <section class="banner">
-    <div class="banner-content">
-      <h2>Discover the Latest Collection</h2>
-      <p>Trendy T-shirts, Accessories, and More</p>
-      <button>Shop Now</button>
-    </div>
-  </section>
-
-  <!-- Featured Products Section -->
-  <section class="featured-products">
-    <h2>Featured Products</h2>
-    <div class="product-grid">
-      <div class="product-item">
-        <img src="product1.jpg" alt="Product 1">
-        <h3>Product Name</h3>
-        <p>₹499</p>
-        <button>Buy Now</button>
-      </div>
-      <div class="product-item">
-        <img src="product2.jpg" alt="Product 2">
-        <h3>Product Name</h3>
+      <li><a
