--- a/index.html
+++ b/index.html
@@ -1,40 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FA-Tshirt</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FA-Tshirt</title>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
+    <style>
+        /* General Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+
+        /* Header Section */
+        header {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 15px 30px;
+            background-color: #1d1d1d;
+            color: white;
+        }
+
+        header .logo h1 {
+            font-family: 'Orbitron', sans-serif;
+            font-size: 36px;
+            font-weight: bold;
+            color: #fff;
+            margin-right: 20px;
+        }
+
+        header .search-bar input {
+            padding: 12px;
+            width: 350px;
+            border-radius: 20px;
+            border: 1px solid #ccc;
+            font-size: 16px;
+            margin-right: 20px;
+        }
+
+        header .search-bar input::placeholder {
+            color: #bbb;
+        }
+
+        header .search-bar {
+            display: flex;
+            align-items: center;
+        }
+
+        header .search-bar input::before {
+            content: '\1F50D';  /* Magnifying Glass Unicode */
+            position: absolute;
+            padding-left: 10px;
+        }
+
+        header .header-right a {
+            text-decoration: none;
+            color: white;
+            margin-left: 15px;
+            font-weight: bold;
+            font-size: 18px;
+            padding: 8px 15px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        header .header-right a:hover {
+            background-color: #ff6347; /* Red color on hover */
+        }
+
+        /* Main Navigation Menu */
+        .main-nav {
+            background-color: #222;
+            padding: 10px 0;
+            text-align: center;
+        }
+
+        .main-nav ul {
+            list-style-type: none;
+            display: flex;
+            justify-content: center;
+        }
+
+        .main-nav ul li {
+            margin-right: 30px;
+        }
+
+        .main-nav ul li a {
+            color: white;
+            text-decoration: none;
+            font-size: 18px;
+            text-transform: uppercase;
+        }
+
+        .main-nav ul li a:hover {
+            color: #ff6347;
+        }
+    </style>
 </head>
 <body>
 
-  <!-- Header Section -->
-  <header>
-    <div class="header-content">
-      <!-- Logo Section -->
-      <div class="logo">
-        <h1>FA-Tshirt</h1>
-      </div>
+    <!-- Header Section -->
+    <header>
+        <div class="logo">
+            <h1>FA-Tshirt</h1>
+        </div>
+        <div class="search-bar">
+            <input type="text" placeholder="Search your products">
+        </div>
+        <div class="header-right">
+            <a href="#">Login</a>
+            <a href="#">Cart</a>
+        </div>
+    </header>
 
-      <!-- Search Bar Section -->
-      <div class="search-bar">
-        <input type="text" placeholder="Search your products">
-        <button class="search-btn">
-          <img src="search-icon.png" alt="Search" />
-        </button>
-      </div>
+    <!-- Main Navigation Menu -->
+    <nav class="main-nav">
+        <ul>
+            <li><a href="#">Men</a></li>
+            <li><a href="#">Women</a></li>
+            <li><a href="#">Plus Size</a></li>
+            <li><a href="#">Accessories</a></li>
+            <li><a href="#">Official Merch</a></li>
+        </ul>
+    </nav>
 
-      <!-- Login and Cart -->
-      <div class="header-right">
-        <a href="#" class="login">Login</a>
-        <a href="#" class="cart">Cart</a>
-      </div>
-    </div>
-  </header>
-
-  <!-- Main Navigation Bar -->
-  <nav class="main-nav">
-    <ul>
-      <li><a href="#">Men</a></li>
-      <li><a href="#">Women</a></li>
-      <li><a
+</body>
+</html>
