--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
             font-size: 36px;
             font-weight: bold;
             color: #fff;
+            margin-right: 15px; /* Bring it closer to the search bar */
         }
         header .search-bar input {
             padding: 12px;
-            width: 350px;
+            width: 450px; /* Stretch the search bar */
             border-radius: 20px;
             border: 1px solid #ccc;
             font-size: 16px;
@@ -67,7 +68,7 @@
         }
         /* Main Navigation Menu */
         .main-nav {
-            background-color: lightgreen;
+            background-color: white;
             padding: 10px 0;
             text-align: center;
         }
@@ -78,7 +79,7 @@
             gap: 30px;
         }
         .main-nav ul li a {
-            color: white;
+            color: black; /* Text color for navigation items */
             text-decoration: none;
             font-size: 18px;
             text-transform: uppercase;
