--- a/index.html
+++ b/index.html
@@ -3,217 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FA-Tshirt</title>
-    <style>
-        /* General Reset */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        /* Header Section */
-        header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 15px 30px;
-            background-color: #1d1d1d;
-            color: white;
-        }
-        header .logo h1 {
-            font-size: 36px;
-            font-weight: bold;
-            color: #fff;
-            margin-right: 15px; /* Bring it closer to the search bar */
-        }
-        header .search-bar input {
-            padding: 12px;
-            width: 450px; /* Stretch the search bar */
-            border-radius: 20px;
-            border: 1px solid #ccc;
-            font-size: 16px;
-        }
-        header .search-bar input::placeholder {
-            color: #888;
-        }
-        header .header-right a {
-            text-decoration: none;
-            color: white;
-            margin-left: 15px;
-            font-weight: bold;
-            font-size: 18px;
-            padding: 8px 15px;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-        header .header-right a:hover {
-            background-color: #ff6347;
-        }
-        /* New "Contact Us" added */
-        .contact-us {
-            position: absolute;
-            right: 30px;
-            top: 15px;
-            font-size: 16px;
-            color: white;
-            text-decoration: none;
-        }
-        .contact-us:hover {
-            color: #ff6347;
-        }
-        /* Main Navigation Menu */
-        .main-nav {
-            background-color: white;
-            padding: 10px 0;
-            text-align: center;
-        }
-        .main-nav ul {
-            list-style-type: none;
-            display: flex;
-            justify-content: center;
-            gap: 30px;
-        }
-        .main-nav ul li a {
-            color: black; /* Text color for navigation items */
-            text-decoration: none;
-            font-size: 18px;
-            text-transform: uppercase;
-        }
-        .main-nav ul li a:hover {
-            color: #ff6347;
-        }
-        /* Banner Section */
-        .banner {
-            background-color: #333;
-            color: white;
-            padding: 60px 20px;
-            text-align: center;
-        }
-        .banner h2 {
-            font-size: 40px;
-            margin-bottom: 10px;
-        }
-        .banner p {
-            font-size: 20px;
-            margin-bottom: 20px;
-        }
-        .banner button {
-            padding: 12px 20px;
-            font-size: 16px;
-            background-color: #ff6347;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .banner button:hover {
-            background-color: #e5533f;
-        }
-        /* Featured Products Section */
-        .featured-products {
-            padding: 50px 20px;
-            text-align: center;
-        }
-        .featured-products h2 {
-            font-size: 32px;
-            margin-bottom: 30px;
-        }
-        .product-grid {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 30px;
-        }
-        .product-item {
-            background-color: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-        }
-        .product-item img {
-            width: 100%;
-            height: 250px;
-            object-fit: cover;
-            border-radius: 8px;
-        }
-        .product-item h3 {
-            font-size: 18px;
-            margin-top: 15px;
-        }
-        .product-item p {
-            font-size: 16px;
-            color: #ff6347;
-            margin-top: 10px;
-        }
-        .product-item button {
-            padding: 10px 20px;
-            font-size: 16px;
-            background-color: #ff6347;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .product-item button:hover {
-            background-color: #e5533f;
-        }
-    </style>
+    <title>FA-Tshirt - Home</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
+    <!-- Top Offer Banner -->
+    <div class="offer-banner">🔥 Get Flat 20% Off - Use Code: FA20 | 🚀 Free Shipping on Orders Above ₹499</div>
+
+    <!-- Header Section -->
     <header>
-        <div class="logo">
-            <h1>FA-Tshirt</h1>
-        </div>
+        <div class="logo">FA-Tshirt</div>
         <div class="search-bar">
             <input type="text" placeholder="Search your products...">
+            <button class="search-btn">🔍</button>
         </div>
         <div class="header-right">
             <a href="#">Login</a>
-            <a href="#">Cart</a>
+            <a href="#">🛒 Cart</a>
+            <a href="#">Contact Us</a>
         </div>
-        <a href="#" class="contact-us">Contact Us</a>
     </header>
+
+    <!-- Main Navigation -->
     <nav class="main-nav">
         <ul>
             <li><a href="#">Men</a></li>
             <li><a href="#">Women</a></li>
             <li><a href="#">Kids</a></li>
             <li><a href="#">Plus Size</a></li>
-            <li><a href="#">Accessories</a></li>
             <li><a href="#">Latest Collection</a></li>
         </ul>
     </nav>
-    <div class="banner">
-        <h2>Welcome to FA-Tshirt</h2>
-        <p>Your one-stop shop for trendy t-shirts!</p>
-        <button>Shop Now</button>
-    </div>
-    <div class="featured-products">
-        <h2>Featured Products</h2>
+
+    <!-- Hero Section -->
+    <section class="hero">
+        <h1>Wear Your Attitude with FA-Tshirt</h1>
+        <p>Discover trendy & comfortable fashion at unbeatable prices!</p>
+        <button class="shop-now">Shop Now</button>
+    </section>
+
+    <!-- Featured Products -->
+    <section class="featured-products">
+        <h2>Best Sellers</h2>
         <div class="product-grid">
             <div class="product-item">
-                <img src="https://via.placeholder.com/300" alt="Product 1">
-                <h3>T-Shirt 1</h3>
-                <p>$19.99</p>
+                <img src="tshirt1.jpg" alt="T-shirt 1">
+                <h3>Classic Black Tee</h3>
+                <p>₹299</p>
                 <button>Add to Cart</button>
             </div>
             <div class="product-item">
-                <img src="https://via.placeholder.com/300" alt="Product 2">
-                <h3>T-Shirt 2</h3>
-                <p>$22.99</p>
+                <img src="tshirt2.jpg" alt="T-shirt 2">
+                <h3>Oversized White Tee</h3>
+                <p>₹349</p>
                 <button>Add to Cart</button>
             </div>
             <div class="product-item">
-                <img src="https://via.placeholder.com/300" alt="Product 3">
-                <h3>T-Shirt 3</h3>
-                <p>$18.99</p>
+                <img src="tshirt3.jpg" alt="T-shirt 3">
+                <h3>Printed Graphic Tee</h3>
+                <p>₹399</p>
                 <button>Add to Cart</button>
             </div>
         </div>
-    </div>
+    </section>
+
+    <!-- Footer Section -->
+    <footer>
+        <p>&copy; 2025 FA-Tshirt. All rights reserved.</p>
+    </footer>
 </body>
 </html>
