--- a/index.html
+++ b/index.html
@@ -3,74 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FA-Tshirt - Home</title>
+    <title>FA-Tshirt</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
 </head>
 <body>
-    <!-- Top Offer Banner -->
-    <div class="offer-banner">🔥 Get Flat 20% Off - Use Code: FA20 | 🚀 Free Shipping on Orders Above ₹499</div>
-
-    <!-- Header Section -->
     <header>
         <div class="logo">FA-Tshirt</div>
         <div class="search-bar">
-            <input type="text" placeholder="Search your products...">
-            <button class="search-btn">🔍</button>
+            <input type="text" placeholder="Search your products">
         </div>
         <div class="header-right">
             <a href="#">Login</a>
-            <a href="#">🛒 Cart</a>
+            <a href="#">Cart</a>
             <a href="#">Contact Us</a>
         </div>
     </header>
-
-    <!-- Main Navigation -->
     <nav class="main-nav">
         <ul>
             <li><a href="#">Men</a></li>
             <li><a href="#">Women</a></li>
             <li><a href="#">Kids</a></li>
             <li><a href="#">Plus Size</a></li>
+            <li><a href="#">Accessories</a></li>
             <li><a href="#">Latest Collection</a></li>
         </ul>
     </nav>
-
-    <!-- Hero Section -->
-    <section class="hero">
-        <h1>Wear Your Attitude with FA-Tshirt</h1>
-        <p>Discover trendy & comfortable fashion at unbeatable prices!</p>
-        <button class="shop-now">Shop Now</button>
-    </section>
-
-    <!-- Featured Products -->
-    <section class="featured-products">
-        <h2>Best Sellers</h2>
-        <div class="product-grid">
-            <div class="product-item">
-                <img src="tshirt1.jpg" alt="T-shirt 1">
-                <h3>Classic Black Tee</h3>
-                <p>₹299</p>
-                <button>Add to Cart</button>
-            </div>
-            <div class="product-item">
-                <img src="tshirt2.jpg" alt="T-shirt 2">
-                <h3>Oversized White Tee</h3>
-                <p>₹349</p>
-                <button>Add to Cart</button>
-            </div>
-            <div class="product-item">
-                <img src="tshirt3.jpg" alt="T-shirt 3">
-                <h3>Printed Graphic Tee</h3>
-                <p>₹399</p>
-                <button>Add to Cart</button>
-            </div>
-        </div>
-    </section>
-
-    <!-- Footer Section -->
-    <footer>
-        <p>&copy; 2025 FA-Tshirt. All rights reserved.</p>
-    </footer>
 </body>
 </html>
