--- a/index.html
+++ b/index.html
@@ -24,12 +24,21 @@
             padding: 15px 30px;
             background-color: #1d1d1d;
             color: white;
+            position: relative;
         }
         header .logo h1 {
             font-size: 36px;
             font-weight: bold;
             color: #fff;
             margin-right: 15px;
+            animation: funkiFont 1.5s ease infinite;
+        }
+        @keyframes funkiFont {
+            0% { transform: rotate(0deg); color: #ff6347; }
+            25% { transform: rotate(10deg); color: #ffb6c1; }
+            50% { transform: rotate(-10deg); color: #8a2be2; }
+            75% { transform: rotate(5deg); color: #32cd32; }
+            100% { transform: rotate(0deg); color: #ff6347; }
         }
         header .search-bar input {
             padding: 12px;
@@ -41,10 +50,14 @@
         header .search-bar input::placeholder {
             color: #888;
         }
+        header .header-right {
+            display: flex;
+            gap: 15px;
+            justify-content: flex-start;
+        }
         header .header-right a {
             text-decoration: none;
             color: white;
-            margin-left: 15px;
             font-weight: bold;
             font-size: 18px;
             padding: 8px 15px;
@@ -58,7 +71,7 @@
         .contact-us {
             position: absolute;
             right: 30px;
-            top: 15px;
+            top: 75px; /* Move it down a bit */
             font-size: 16px;
             color: white;
             text-decoration: none;
