--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FA-Tshirt</title>
-    <link href="https://fonts.googleapis.com/css2?family=Snap+ITC&display=swap" rel="stylesheet">
     <style>
         /* General Reset */
         * {
@@ -14,7 +13,7 @@
         }
         body {
             font-family: 'Arial', sans-serif;
-            background-color: red;
+            background-color: #f4f4f4;
             color: #333;
         }
         /* Header Section */
@@ -23,18 +22,14 @@
             justify-content: space-between;
             align-items: center;
             padding: 15px 30px;
-            background-color: #1d1d1d;
+            background-color: red; /* Red background for header */
             color: white;
-            position: relative;
         }
         header .logo h1 {
             font-size: 36px;
             font-weight: bold;
-            color: blue;
-            font-family: 'Snap ITC', sans-serif;
-        }
-        header .search-bar {
-            position: relative;
+            color: blue; /* Blue text for FA-Tshirt */
+            margin-right: 15px;
         }
         header .search-bar input {
             padding: 12px;
@@ -47,23 +42,10 @@
         header .search-bar input::placeholder {
             color: #888;
         }
-        header .search-bar::before {
-            content: '🔍'; /* Magnifying glass icon */
-            position: absolute;
-            top: 50%;
-            left: 10px;
-            transform: translateY(-50%);
-            font-size: 20px;
-            color: #888;
-        }
-        header .header-right {
-            display: flex;
-            gap: 15px;
-            justify-content: flex-start;
-        }
         header .header-right a {
             text-decoration: none;
             color: white;
+            margin-left: 15px;
             font-weight: bold;
             font-size: 18px;
             padding: 8px 15px;
@@ -73,21 +55,9 @@
         header .header-right a:hover {
             background-color: #ff6347;
         }
-        /* New "Contact Us" added */
-        .contact-us {
-            position: absolute;
-            right: 30px;
-            top: 75px;
-            font-size: 16px;
-            color: white;
-            text-decoration: none;
-        }
-        .contact-us:hover {
-            color: #ff6347;
-        }
         /* Main Navigation Menu */
         .main-nav {
-            background-color: grey;
+            background-color: white; /* White background for nav */
             padding: 10px 0;
             text-align: center;
         }
@@ -98,7 +68,7 @@
             gap: 30px;
         }
         .main-nav ul li a {
-            color: white;
+            color: black; /* Black text for nav items */
             text-decoration: none;
             font-size: 18px;
             text-transform: uppercase;
@@ -108,7 +78,7 @@
         }
         /* Banner Section */
         .banner {
-            background-color: #333;
+            background-color: red; /* Red background for banner */
             color: white;
             padding: 60px 20px;
             text-align: center;
@@ -180,27 +150,6 @@
         .product-item button:hover {
             background-color: #e5533f;
         }
-        /* Responsive Design */
-        @media screen and (max-width: 768px) {
-            header {
-                flex-direction: column;
-                text-align: center;
-            }
-            header .logo h1 {
-                font-size: 28px;
-            }
-            header .search-bar input {
-                width: 100%;
-                margin-top: 10px;
-            }
-            .main-nav ul {
-                flex-direction: column;
-                gap: 15px;
-            }
-            .product-grid {
-                grid-template-columns: 1fr;
-            }
-        }
     </style>
 </head>
 <body>
@@ -215,7 +164,6 @@
             <a href="#">Login</a>
             <a href="#">Cart</a>
         </div>
-        <a href="#" class="contact-us">Contact Us</a>
     </header>
     <nav class="main-nav">
         <ul>
