--- a/index.html
+++ b/index.html
@@ -218,3 +218,42 @@
     </div>
 </body>
 </html>
+
+
+<!-- Footer Section -->
+<footer style="background-color: #e4e4e4; padding: 40px 0; font-family: Arial, sans-serif; color: #333;">
+    <div class="footer-content" style="max-width: 1200px; margin: 0 auto; display: flex; justify-content: space-between;">
+        <!-- About Us Section -->
+        <div class="about-us" style="flex: 1; padding-right: 20px;">
+            <h3 style="font-size: 24px; font-weight: bold; color: #ff6347;">About FA-Tshirt</h3>
+            <p style="font-size: 16px; line-height: 1.6;">
+                At FA-Tshirt, we believe that great fashion shouldn't come with a hefty price tag. We're on a mission to provide high-quality, stylish, and trendy t-shirts that anyone can afford. Our vision is to become India’s number one clothing brand by offering products that combine the best of fashion and value.
+            </p>
+            <p style="font-size: 16px; line-height: 1.6;">
+                We are committed to providing you with a wide range of t-shirts made from premium, comfortable fabrics, designed to last and feel great. Our products are created with Indian customers in mind, ensuring you get the latest trends at prices that suit every budget.
+            </p>
+            <p style="font-size: 16px; line-height: 1.6;">
+                We understand the value of good clothing. That’s why we work hard to maintain the perfect balance between quality and price, delivering you luxury-level products without the luxury-level prices.
+            </p>
+        </div>
+        
+        <!-- Quick Links Section -->
+        <div class="quick-links" style="flex: 1; padding-left: 20px;">
+            <h3 style="font-size: 24px; font-weight: bold; color: #ff6347;">Quick Links</h3>
+            <ul style="list-style-type: none; padding-left: 0;">
+                <li><a href="#" style="font-size: 16px; color: #333; text-decoration: none;">Privacy Policy</a></li>
+                <li><a href="#" style="font-size: 16px; color: #333; text-decoration: none;">Terms & Conditions</a></li>
+                <li><a href="#" style="font-size: 16px; color: #333; text-decoration: none;">Shipping & Returns</a></li>
+                <li><a href="#" style="font-size: 16px; color: #333; text-decoration: none;">FAQ</a></li>
+                <li><a href="#" style="font-size: 16px; color: #333; text-decoration: none;">Contact Us</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- Footer Bottom Section -->
+    <div class="footer-bottom" style="background-color: #333; color: white; padding: 20px 0; text-align: center;">
+        <p style="font-size: 16px;">&copy; 2025 FA-Tshirt. All rights reserved. | Designed with ❤️ in India.</p>
+    </div>
+</footer>
+
+
