--- a/index.html
+++ b/index.html
@@ -256,4 +256,25 @@
     </div>
 </footer>
 
+<section id="privacy-policy" style="padding: 20px;">
+    <h2>Privacy Policy</h2>
+    <p>Your privacy is important to us...</p>  <!-- Your content here -->
+</section>
+
+
+<section id="terms-and-conditions" style="padding: 20px;">
+    <h2>Terms & Conditions</h2>
+    <p>By accessing or using the FA-Tshirt website...</p>  <!-- Your content here -->
+</section>
+
+
+<section id="shipping-returns" style="padding: 20px;">
+    <h2>Shipping & Returns</h2>
+    <p>We offer various shipping methods...</p>  <!-- Your content here -->
+</section>
+
+<section id="faq" style="padding: 20px;">
+    <h2>Frequently Asked Questions</h2>
+    <p>1. How do I place an order? <br> To place an order...</p>  <!-- Your content here -->
+</section>
 
