--- a/index.html
+++ b/index.html
@@ -256,25 +256,17 @@
     </div>
 </footer>
 
-<section id="privacy-policy" style="padding: 20px;">
-    <h2>Privacy Policy</h2>
-    <p>Your privacy is important to us...</p>  <!-- Your content here -->
-</section>
+<footer style="background-color: #fff; padding: 20px 0; text-align: center; border-top: 2px solid #e0e0e0;">
+    <div class="footer-links">
+        <ul style="list-style-type: none; padding: 0; margin: 0;">
+            <li><a href="#privacy-policy" style="text-decoration: none; color: #000; padding: 10px;">Privacy Policy</a></li>
+            <li><a href="#terms-and-conditions" style="text-decoration: none; color: #000; padding: 10px;">Terms & Conditions</a></li>
+            <li><a href="#shipping-returns" style="text-decoration: none; color: #000; padding: 10px;">Shipping & Returns</a></li>
+            <li><a href="#faq" style="text-decoration: none; color: #000; padding: 10px;">FAQ</a></li>
+        </ul>
+    </div>
 
-
-<section id="terms-and-conditions" style="padding: 20px;">
-    <h2>Terms & Conditions</h2>
-    <p>By accessing or using the FA-Tshirt website...</p>  <!-- Your content here -->
-</section>
-
-
-<section id="shipping-returns" style="padding: 20px;">
-    <h2>Shipping & Returns</h2>
-    <p>We offer various shipping methods...</p>  <!-- Your content here -->
-</section>
-
-<section id="faq" style="padding: 20px;">
-    <h2>Frequently Asked Questions</h2>
-    <p>1. How do I place an order? <br> To place an order...</p>  <!-- Your content here -->
-</section>
-
+    <div class="footer-contact">
+        <p style="color: #333; font-size: 14px;">© 2025 FA-Tshirt. All rights reserved.</p>
+    </div>
+</footer>
